--- a/data/steerbench/processing.ipynb
+++ b/data/steerbench/processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 16,
    "id": "01e19ae4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 17,
    "id": "7a69be07",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 18,
    "id": "c773f361",
    "metadata": {},
    "outputs": [],
@@ -42,8 +42,8 @@
     "    open_ended = data.get('open_ended')\n",
     "\n",
     "    P = (\n",
-    "            # f\"You are being evaluated on your ability to provide appropriate responses to {data.get('domain')}-related questions.\\n\"\n",
-    "            # f\"Answer the multiple-choice question by selecting the best option (A, B, C, or D).\\n\\n\"\n",
+    "            f\"You are being evaluated on your ability to provide appropriate responses to {data.get('domain')}-related questions.\\n\"\n",
+    "            f\"Answer the multiple-choice question by selecting the best option (A, B, C, or D).\\n\\n\"\n",
     "            f\"{question}\\n\\n\"\n",
     "            f\"Answer:\"\n",
     "        )\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 19,
    "id": "68572d0b",
    "metadata": {},
    "outputs": [],
@@ -91,30 +91,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 20,
    "id": "2d815f22",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def merge_values(series):\n",
+    "    vals = [v for v in series if v is not None]\n",
+    "    return vals[0] if vals else None\n",
+    "\n",
+    "\n",
     "for domain, data in closed_qa.items():\n",
     "    folder_path = f\"/home/yosef/ws/BiPO/data/{domain}\"\n",
-    "\n",
+    "    \n",
     "    df = defaultdict()\n",
     "    df[\"question\"] = [sen[:sen.find(\":\")+1].strip() for sen in data[\"questions\"]]\n",
     "    df[\"matching\"] = [\n",
-    "            [op for op in ans if op[0] in labels][0]\n",
-    "            for ans, labels in zip(data[\"prompts\"], data[\"labels\"])\n",
-    "        ]\n",
+    "        next((op for op in ans if op[0] in labels and com == \"r/A\"), None)\n",
+    "        for ans, labels, com in zip(data[\"prompts\"], data[\"labels\"], data['communities'])\n",
+    "    ]\n",
     "    df[\"not_matching\"] = [\n",
-    "            [op for op in ans if op[0] not in labels][0]\n",
-    "            for ans, labels in zip(data[\"prompts\"], data[\"labels\"])\n",
-    "        ]\n",
+    "        next((op for op in ans if op[0] not in labels and com == \"r/B\"), None)\n",
+    "        for ans, labels, com in zip(data[\"prompts\"], data[\"labels\"], data['communities'])\n",
+    "    ]\n",
     "    \n",
-    "    tdf = pd.DataFrame(df)\n",
-    "    tdf.to_csv(f\"{folder_path}/test.csv\", index= False)\n",
+    "    merged_df = pd.DataFrame(df)\n",
+    "    merged_df = merged_df.groupby(\"question\", as_index=False).agg({\n",
+    "        \"matching\": merge_values,\n",
+    "        \"not_matching\": merge_values\n",
+    "    })\n",
+    "    merged_df.to_csv(f\"{folder_path}/test.csv\", index= False)\n",
     "\n",
-    "    del df[\"not_matching\"]\n",
-    "    \n",
     "    df[\"A\"] = []\n",
     "    df[\"B\"] = []\n",
     "    df[\"C\"] = []\n",
@@ -133,11 +140,14 @@
     "        df[\"C\"].extend(op_dict[\"C\"])\n",
     "        df[\"D\"].extend(op_dict[\"D\"])\n",
     "\n",
-    "    df[\"matching\"] = [op[0] for op in df[\"matching\"]]\n",
     "    df[\"communities\"] = data[\"communities\"]\n",
-    "\n",
-    "    tidf = pd.DataFrame(df)\n",
-    "    tidf.to_csv(f\"{folder_path}/test_infer.csv\", index= False)"
+    "    first_or_none = lambda series: series.dropna().iloc[0] if len(series.dropna()) else None\n",
+    "    df[\"label\"] = data[\"labels\"]\n",
+    "    del df[\"matching\"]\n",
+    "    del df[\"not_matching\"]\n",
+    "    pdf = pd.DataFrame(df)\n",
+    "    pdf.to_csv(f\"{folder_path}/test_infer.csv\", index= False)\n",
+    "    "
    ]
   }
  ],
