--- a/data/steerbench/processing.ipynb
+++ b/data/steerbench/processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "01e19ae4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "7a69be07",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "c773f361",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "68572d0b",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "2d815f22",
    "metadata": {},
    "outputs": [],
@@ -120,6 +120,7 @@
     "        \"matching\": merge_values,\n",
     "        \"not_matching\": merge_values\n",
     "    })\n",
+    "    merged_df = merged_df.fillna(\"\")\n",
     "    merged_df.to_csv(f\"{folder_path}/test.csv\", index= False)\n",
     "\n",
     "    df[\"A\"] = []\n",
@@ -146,6 +147,7 @@
     "    del df[\"matching\"]\n",
     "    del df[\"not_matching\"]\n",
     "    pdf = pd.DataFrame(df)\n",
+    "    pdf = pdf.fillna(\"\")\n",
     "    pdf.to_csv(f\"{folder_path}/test_infer.csv\", index= False)\n",
     "    "
    ]
