--- a/data/steerbench/processing.ipynb
+++ b/data/steerbench/processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "01e19ae4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "7a69be07",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "c773f361",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "68572d0b",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2d815f22",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
     "        \"matching\": merge_values,\n",
     "        \"not_matching\": merge_values\n",
     "    })\n",
-    "    merged_df = merged_df.fillna(\"\")\n",
+    "    merged_df = merged_df.fillna(\"None of all above\")\n",
     "    merged_df.to_csv(f\"{folder_path}/test.csv\", index= False)\n",
     "\n",
     "    df[\"A\"] = []\n",
@@ -147,9 +147,33 @@
     "    del df[\"matching\"]\n",
     "    del df[\"not_matching\"]\n",
     "    pdf = pd.DataFrame(df)\n",
-    "    pdf = pdf.fillna(\"\")\n",
     "    pdf.to_csv(f\"{folder_path}/test_infer.csv\", index= False)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "37ba50aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "question        0\n",
+       "matching        0\n",
+       "not_matching    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pd.read_csv(\"/home/yosef/ws/BiPO/data/carnivore_vegetarian/test.csv\")\n",
+    "a.isnull().sum()"
    ]
   }
  ],
