--- a/data/steerbench/processing.ipynb
+++ b/data/steerbench/processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "01e19ae4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "7a69be07",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "c773f361",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "68572d0b",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
     "    df = defaultdict()\n",
     "    df[\"question\"] = [sen[:sen.find(\"?\")+1].strip() for sen in data[\"r/A\"]]\n",
     "    df[\"matching\"] = [sen[sen.find(\"?\")+1:].strip() for sen in data[\"r/A\"]]\n",
-    "    df[\"not_matching\"] = [sen[sen.find(\"?\")+1:].strip() for sen in data[\"r/A\"]]\n",
+    "    df[\"not_matching\"] = [sen[sen.find(\"?\")+1:].strip() for sen in data[\"r/B\"]]\n",
     "\n",
     "    pd_df = pd.DataFrame(df)\n",
     "    os.makedirs(folder_path, exist_ok=True)\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2d815f22",
    "metadata": {},
    "outputs": [],
@@ -153,27 +153,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "37ba50aa",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>matching</th>\n",
+       "      <th>not_matching</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>How do people handle social situations related...</td>\n",
+       "      <td>People often just say they are on a specific d...</td>\n",
+       "      <td>Some say \"I don't eat meat\" and explain when n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>What is a common misconception you encounter a...</td>\n",
+       "      <td>People often believe marketing that meat isn't...</td>\n",
+       "      <td>Many think vegetarians eat chicken as a \"veget...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>How do people manage transitioning to a differ...</td>\n",
+       "      <td>Take time and start gradually to avoid struggl...</td>\n",
+       "      <td>Gradual elimination of meat products helps wit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>How do members of each subreddit deal with cri...</td>\n",
+       "      <td>Some ignore the negativity, feeling validated ...</td>\n",
+       "      <td>Many defend their choices and challenge miscon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>What reasons do members give for choosing thei...</td>\n",
+       "      <td>Many choose a carnivore diet for perceived hea...</td>\n",
+       "      <td>Ethical reasons and personal health are common...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "question        0\n",
-       "matching        0\n",
-       "not_matching    0\n",
-       "dtype: int64"
+       "                                            question  \\\n",
+       "0  How do people handle social situations related...   \n",
+       "1  What is a common misconception you encounter a...   \n",
+       "2  How do people manage transitioning to a differ...   \n",
+       "3  How do members of each subreddit deal with cri...   \n",
+       "4  What reasons do members give for choosing thei...   \n",
+       "\n",
+       "                                            matching  \\\n",
+       "0  People often just say they are on a specific d...   \n",
+       "1  People often believe marketing that meat isn't...   \n",
+       "2  Take time and start gradually to avoid struggl...   \n",
+       "3  Some ignore the negativity, feeling validated ...   \n",
+       "4  Many choose a carnivore diet for perceived hea...   \n",
+       "\n",
+       "                                        not_matching  \n",
+       "0  Some say \"I don't eat meat\" and explain when n...  \n",
+       "1  Many think vegetarians eat chicken as a \"veget...  \n",
+       "2  Gradual elimination of meat products helps wit...  \n",
+       "3  Many defend their choices and challenge miscon...  \n",
+       "4  Ethical reasons and personal health are common...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = pd.read_csv(\"/home/yosef/ws/BiPO/data/carnivore_vegetarian/test.csv\")\n",
-    "a.isnull().sum()"
+    "import pandas as pd\n",
+    "a = pd.read_csv(\"/home/yosef/ws/BiPO/data/carnivore_vegetarian/train.csv\")\n",
+    "a.head()"
    ]
   }
  ],
